# chat_bot

./: .env.example  ADMIN_COMMANDS.md  ARCHITECTURE.md  BACKLOG.md  BACKUP_RUNBOOK.md  BOTTLE_RULES.md  DB_SCHEMA.md  DEPLOYMENT_CHECKLIST.md  HARDENING_LOGGING.md  HARDENING_NOTES.md  MVP_SMOKE_CHECKLIST.md  PHASE2_SMOKE_CHECKLIST.md  PROD_READINESS.md  QUESTIONNAIRE_SPEC_V1.md  README.md  README_DEPLOY.md  RELEASE_NOTE_MVP_STAGE1.md  ROADMAP.md  ROLE_PERMISSIONS_CHECKLIST.md  TEST_PLAN.md  main.py  requirements.txt  run.sh
bot/: app.py  commands.py  (+2 more)
reference/mamoolya/mamoolyaBot-main/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  PROJECT_MAP.md  README.md  bot.py  pyproject.toml  railway.toml  supervisord.conf
reference/mamoolya/mamoolyaBot-main/mamoolyaBot/: ai_client.py  bot.py  utils.py  zodiac_utils.py
reference/mamoolya/mamoolyaBot-main/tests/: test_ai_client_integration.py  test_bottle_game.py  test_day_messages.py  test_horoscope.py  test_horoscope_enhanced.py  test_menu.py  test_menu_access.py  test_quotes.py  test_roll.py  test_utils_version.py  test_webapp.py  test_zodiac.py  test_zodiac_utils.py
reference/mamoolya/mamoolyaBot-main/webapp/backend/: README.md  app.py  fix_prod_issue.py  start.py  start_local.py  test_quotes_api.py
reference/mamoolya/mamoolyaBot-main/webapp/frontend/: README.md  package-lock.json  package.json  svelte.config.js
reference/mamoolya/mamoolyaBot-main/webapp/frontend/src/lib/: api.js
reference/mamoolya/mamoolyaBot-main/webapp/frontend/src/routes/: +layout.svelte  +page.svelte
(+76 files in other folders)
